overlay/dev/kibana/nginx-svc.yaml
#######################################################################
# Service to expose Wazuh Kibana nginx proxy inside the VPC
#######################################################################

apiVersion: v1
kind: Service
metadata:
  name: wazuh-nginx
  namespace: wazuh
  labels:
    app: wazuh-nginx
    dns: route53
spec:
  type: ClusterIP
